Thu Apr 10 15:01:06 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (append_obj): clear allocated memory.

	* addr2line.c (rb_dump_backtrace_with_lines): free `base_addrs'.

Thu Apr 10 14:40:18 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_writebarrier_unprotect_promoted): disable to dump debug
	  message when RGENGC_CHECK_MODE == 0.

Thu Apr 10 08:13:47 2014  Tanaka Akira  <akr@fsij.org>

	* signal.c (check_stack_overflow): Don't use ucontext_t if ucontext.h
	  is not available.
	  Fixes build on Android (x86).

Wed Apr  9 23:22:44 2014  Tanaka Akira  <akr@fsij.org>

	* gc.c (mark_current_machine_context): Call SET_STACK_END.
	  This reverts a hunk of r40703 by ko1.
	  This fixes [ruby-dev:48098] [Bug #9717].

Wed Apr  9 21:02:04 2014  Tanaka Akira  <akr@fsij.org>

	* process.c (OBJ2UID1): Defined even if getpwnam_r is not usable.
	  (OBJ2GID1): Defined even if getgrnam_r is not usable.
	  This fixes compilation error on Android.

Wed Apr  9 15:16:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_default_internal): fix rdoc.  `__FILE__` is
	  in filesystem encoding but not `default_internal`.
	  [ruby-core:61894] [Bug #9713]

Wed Apr  9 14:43:00 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb: more long timeout.
	  This test failed under RGENGC_CHECK_MODE >= 2.

Wed Apr  9 13:07:13 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: get rid of __builtin_setjmp/__builtin_longjmp on
	  x64-mingw, which causes SEGV with callcc.
	  [ruby-core:61887] [Bug #9710]

Wed Apr  9 12:44:54 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_buf_cat): should round up the capacity by 4KiB,
	  but not number of rooms.  [ruby-core:61886] [Bug #9709]

Tue Apr  8 22:55:32 2014  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mkmf.rb (MakeMakefile#dir_config): Improve documentation.

Tue Apr  8 22:31:44 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename `RGENGC_THREEGEN' to `RGENGC_AGE2_PROMOTION'.
