@@ -1,3 +1,8 @@
+Thu Apr 10 18:57:12 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (gc_verify_internal_consistency): move lines and enable
+	  allrefs_dump() on RGENGC_CHECK_MODE >= 4.
+
 Thu Apr 10 15:01:06 2014  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* addr2line.c (append_obj): clear allocated memory.
